ms-email-service-laravel/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-laravel
spec:
  selector:
    matchLabels:
      run: email-laravel
  template:
    metadata:
      labels:
        run: email-laravel
    spec:
      containers:
        - name: demo
          image: <username>/email-laravel
          ports:
            - containerPort: 80
